[package]
name = "flexihash"
version = "0.1.6"
authors = ["Shish <shish@shishnet.org>"]
edition = "2018"
license = "MIT"
description = "Consistent hashing following the API and compatible with flexihash-php and flexihash-py"
homepage = "https://shish.io"
documentation = "https://github.com/shish/flexihash-rs/"
repository = "https://github.com/shish/flexihash-rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
crc = "1.8.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hasher"
harness = false

[[bench]]
name = "lookup_list"
harness = false

[[bench]]
name = "add_target"
harness = false

[[bench]]
name = "new"
harness = false
